--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "java.project.referencedLibraries": [
     "lib/**/*.jar",
-    "java/lib/mysql-connector-j-8.3.0.jar"
+    "java/lib/mysql-connector-j-8.3.0.jar",
+    "java/lib/javax.mail.jar",
+    "java/lib/activation-1.1.1.jar"
   ]
 }
