--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "lib/**/*.jar",
     "java/lib/mysql-connector-j-8.3.0.jar",
     "java/lib/javax.mail.jar",
-    "java/lib/activation-1.1.1.jar"
+    "java/lib/activation-1.1.1.jar",
+    "java/lib/itextpdf-5.5.13.4.jar"
   ]
 }
