--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,10 @@
   "java.project.referencedLibraries": [
     "lib/**/*.jar",
     "java/lib/mysql-connector-j-8.3.0.jar",
+    "java/lib/kotlin-stdlib-1.6.10.jar",
     "java/lib/javax.mail.jar",
-    "java/lib/activation-1.1.1.jar",
-    "java/lib/itextpdf-5.5.13.4.jar",
     "java/lib/java-dotenv-5.2.2.jar",
-    "java/lib/kotlin-stdlib-1.6.10.jar"
+    "java/lib/itextpdf-5.5.13.4.jar",
+    "java/lib/activation-1.1.1.jar"
   ]
 }
