--- a/the-laravel/composer.json
+++ b/the-laravel/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-frontend-presets/material-dashboard": "^2.0",
         "laravel/framework": "^10.0",
@@ -14,7 +15,6 @@
         "laravel/ui": "^4.5",
         "maatwebsite/excel": "^3.1.55",
         "phpoffice/phpspreadsheet": "^1.29.0"
-
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
